--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Christopher Kayne\\AppData\\Roaming\\NetBeans\\24\\build.properties
+user.properties.file=C:\\Users\\MSI BRAVO\\AppData\\Roaming\\NetBeans\\24\\build.properties
